use repo name for policy scan

--- a/.github/workflows/policyscan.yml
+++ b/.github/workflows/policyscan.yml
@@ -32,7 +32,7 @@ jobs:
           path: project.zip # Wildcards can be used to filter the files copied into the container. See: https://github.com/actions/upload-artifact
       - uses: veracode/veracode-uploadandscan-action@master # Run the uploadandscan action. Inputs are described above.
         with:
-          appname: '${{ secrets.VERACODE_APP_NAME }}'
+          appname: '${{ github.event.repository.name }}'
           filepath: 'project.zip'
           vid: '${{ secrets.VERACODE_API_ID }}'
           vkey: '${{ secrets.VERACODE_API_KEY }}'
